--- a/scss/layout/_archive-gallery.scss
+++ b/scss/layout/_archive-gallery.scss
@@ -1,28 +1,31 @@
 .archive-gallery {
   &__form {
-    width : 626px;
+    width : 680px;
     margin : 80px auto 0;
     @include mq_sp{
-      width : size_sp(530);
+      width : size_sp(618);
       margin-top : size_sp(100);
     }
     &-list  {
-      @include flex($display: flex, $wrap: wrap, $justify_c: flex-start, $align_i: center, $align_c: stretch, $direction: row,);
+      // @include flex($display: flex, $wrap: wrap, $justify_c: flex-start, $align_i: center, $align_c: stretch, $direction: row,);
+      @include flex($display: flex, $wrap: wrap, $justify_c: center, $align_i: center, $align_c: stretch, $direction: row,);
       @include mq_sp{
         flex-direction : column
       }
     }
     &-item {
-      width : 298px;
+      width : 352px;
       @include flex($display: flex, $wrap: nowrap, $justify_c: flex-start, $align_i: center, $align_c: stretch, $direction: row,);
       @include mq_sp{
         width : 100%;
       }
       &:first-of-type {
-        margin-right : 30px;
-        @include mq_sp{
-          margin-right: 0;
-        }
+        // width : 298px;
+        // margin-right : 30px;
+        // @include mq_sp{
+        //   width : 100%;
+        //   margin-right: 0;
+        // }
       }
       &:nth-of-type(2) {
         @include mq_sp{
@@ -34,8 +37,10 @@
       font-size : 18px;
       line-height : 1;
       margin-right : 14px;
+      white-space: nowrap;
       @include mq_sp{
         @include fz_vw(30);
+        width : size_sp(209);
         margin-right: size_sp(28);
       }
     }
@@ -87,8 +92,9 @@
       cursor : pointer;
       @include mq_sp{
         @include fz_vw(30);
+        width : size_sp(530);
         justify-content: flex-start;
-        margin-top : size_sp(48);
+        margin : size_sp(48) auto 0;
       }
       &-txt {
         display : block;
