--- a/scss/layout/_post.scss
+++ b/scss/layout/_post.scss
@@ -151,14 +151,9 @@
   }
   &__thumb {
     width : 100%;
-    height : 220px;
+    height : 410px;
     @include mq_sp{
-      height : size_sp(213);
-    }
-    & img {
-      width : 100%;
-      height : 100%;
-      object-fit: cover;
+      height : size_sp(447);
     }
   }
   &__ttl {
@@ -173,6 +168,153 @@
     }
   }
   &__location {
+    font-size : 16px;
+    line-height : (24/16);
+    margin-top : 10px;
+    @include mq_sp{
+      @include fz_vw(22);
+      line-height : calc(32/22);
+      margin-top : size_sp(14);
+    }
+  }
+}
+
+.loop-idea-design {
+  width : 293px;
+  text-align : center;
+  @include mq_sp{
+    width : size_sp(320);
+  }
+  &:not(:nth-of-type(3n)) {
+    margin-right : 41px;
+    @media (max-width: 1163px){
+      margin-right : 0;
+    }
+  }
+  &:not(:nth-of-type(2n)) {
+    @media (max-width: 1163px){
+      margin-right : 41px;
+    }
+    @include mq_sp{
+      margin-right : size_sp(36);
+    }
+  }
+  &:nth-of-type(n+4) {
+    margin-top : 82px;
+    @media (max-width: 1163px){
+      margin-top : 0;
+    }
+  }
+  &:nth-of-type(n+3) {
+    @media (max-width: 1163px){
+      margin-top : 82px
+    }
+    @include mq_sp{
+      margin-top : size_sp(75);
+    }
+  }
+  &__thumb {
+    width : 100%;
+    height : 220px;
+    position: relative;
+    @include mq_sp{
+      height : size_sp(213);
+    }
+    & > img {
+      filter: blur(2px);
+    }
+    &:before {
+      content: "";
+      width : 100%;
+      height : 100%;
+      background-color : rgba(255,255,255,.4);
+      position: absolute;
+      top : 0;
+      left: 0;
+      z-index: 1;
+    }
+    &-sub {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top : 50%;
+      left : 50%;
+      transform : translate(-50%, -50%);
+      z-index: 2;
+    }
+  }
+  &__recommend {
+    font-size : 14px;
+    font-weight: 700;
+    line-height: (20/14);
+    letter-spacing: .1em;
+    text-align: center;
+    width : 100%;
+    height : 56px;
+    padding : 4px 0;
+    color : $white00;
+    background-image : url(./img/single/idea-design/bg_recommend.png);
+    background-size : cover;
+    background-repeat: no-repeat;
+    // background-color : rgba($blue02,.8);
+    position: absolute;
+    top : 0;
+    left: 0;
+    z-index: 3;
+    @include mq_sp{
+      @include fz_vw(20);
+      line-height : (29/20);
+      height : size_sp(80);
+      padding : size_sp(10) 0 size_sp(9);
+      background-image : url(./img/single/idea-design/bg_recommend-sp.png);
+      top : size_sp(-2);
+    }
+    // &::before {
+    //   content : "";
+    //   width : 42px;
+    //   height : 14px;
+    //   background-color : rgba($blue02,.8);
+    //   position : absolute;
+    //   top : 28px;
+    //   left : 0;
+    //   @include mq_sp{
+    //     width : size_sp(48);
+    //     height : size_sp(16);
+    //     top : size_sp(48);
+    //   }
+    // }
+    // &::after {
+    //   content : "";
+    //   width : 14px;
+    //   height : 14px;
+    //   background-color : rgba($blue02,.8);
+    //   position : absolute;
+    //   top : 42px;
+    //   left : 0;
+    //   @include mq_sp{
+    //     width : size_sp(32);
+    //     height : size_sp(16);
+    //     top : size_sp(64);
+    //   }
+    // }
+  }
+  &__ttl {
+    font-size : 18px;
+    font-weight : 700;
+    line-height : (26/18);
+    margin-top : 20px;
+    @include mq_sp{
+      @include fz_vw(22);
+      line-height : calc(32/22);
+      margin-top : size_sp(20);
+    }
+  }
+  &__name {
+    &:not(:first-of-type) {
+      margin-top : 7px;
+    }
+  }
+  &__property {
     font-size : 16px;
     line-height : (24/16);
     margin-top : 10px;
