--- a/scss/module/_fv.scss
+++ b/scss/module/_fv.scss
@@ -49,6 +49,11 @@
       }
     }
   }
+  & img {
+    width : 100%;
+    height : 100%;
+    object-fit: cover;
+  }
   &__ttl {
     font-size : 32px;
     font-weight : 300;
@@ -70,6 +75,14 @@
       @include fz_vw(36);
       line-height : calc(52/36);
       transform : translate(-50%, -73%);
+    }
+    &-sub {
+      &:not(:first-of-type) {
+        margin-top : 25px;
+        @include mq_sp{
+          margin-top : size_sp(24);
+        }
+      }
     }
     & span {
       font-size : 24px;
