--- a/style.scss
+++ b/style.scss
@@ -51,8 +51,10 @@ License: GNU General Public License v2 or later
 @import "scss/layout/_top.scss";
 @import "scss/layout/_archive.scss";
 @import "scss/layout/_archive-gallery.scss";
+@import "scss/layout/_archive-idea-design.scss";
 @import "scss/layout/_service.scss";
 @import "scss/layout/_single.scss";
+@import "scss/layout/single-idea-design.scss";
 @import "scss/layout/_single-gallery.scss";
 @import "scss/layout/_post.scss";
 @import "scss/layout/_container.scss";
